base/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yas-ingress-vs
spec:
  hosts:
    - "*"
  gateways:
    - yas-gateway
  http:
    - match:
        - uri:
            prefix: /realms
        - uri:
            prefix: /resources
      route:
        - destination:
            host: identity
            port:
              number: 80
    - match:
        - uri:
            prefix: /swagger-ui
      route:
        - destination:
            host: swagger-ui
            port:
              number: 8080
    - match:
        - uri:
            prefix: /backoffice-api
      rewrite:
        uri: /
      route:
        - destination:
            host: backoffice-bff
            port:
              number: 8087
    - match:
        - uri:
            prefix: /backoffice
      route:
        - destination:
            host: backoffice-ui
            port:
              number: 3000
    - match:
        - uri:
            prefix: /api
        - uri:
            prefix: /authentication
        - uri:
            prefix: /oauth2
        - uri:
            prefix: /login/oauth2
        - uri:
            prefix: /logout
      route:
        - destination:
            host: storefront-bff
            port:
              number: 8087
    - route:
        - destination:
            host: storefront-ui
            port:
              number: 3000
